data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_718.wast
;; 9. **Stack-Manipulation Before Conditional Branch**    - Create a loop where multiple stack operations (push, pop, .etc.) occur before a `br_if`, impacting the branching decision. Verify the loop correctly evaluates and acts based on the final stack value.    - **Reason**: Ensures that `br_if` correctly evaluates the condition after complex stack manipulations.

(assert_invalid
  (module (func
    (loop (result i32)
      (i32.const 1)
      (i32.const 2)
      (i32.add)
      (i32.const 0)
      (br_if 0)
    )
  ))
  "type mismatch"
)